- When selecting an entity, different from the proposed on country file, KLog asks the user which one to use.
- BugFix: Preferences->Misc: It was not possible to edit the default filename. (TNX K6XT).
- BugFix: Added the Power unit (W) to the power box. Debian bug #654332.
- BugFix: When editing a QSO in some text boxes text was reused from previous QSO and data could be corrupted.

January 2016 - 0.9.2.3
- Improved the way translations are managed (Specially in Linux).
- Icon application is now shown in OSX & Windows.
- New translation: Japanese by JL3OXR (Thank you!).
- Bugfix: Some strings where not defined to be translated (TNX JL3OXR).
- Bugfix: Some tips in the UI where not correctly placed (TNX JL3OXR).
- Bugfix: QSOs in JT9 were not properly imported from ADIF (TNX EA3XQ).
- Bugfix: Logfiles with the <EOH> in the first line, following some test were not properly imported.

November-2015 - 0.9.2.2
- Translations are now working properly in Windows & OSX.
- New translation: Catalan by EA3NM (Thank you!).
- Ported from Qt4 to Qt5.
- BugFix: Aether ADIF files could not be properly imported. (TNX AA5VU).
- BugFix: QSOs where not properly shown in the search box.
- BugFix: When started for the first time, no modes were shown as default.
- BugFix: CTY.CSV was not properly updated.
- BugFix: When upgrading the mode information in database some modes where not properly updated.
- GUI: Changed the year to show the full number to avoid problems with old QSO.
- Import ADIF functionality is improved to support importing of logs with some missing data.
- Removed the Spot button until its functionality is implemented.


September-2015 - 0.9.2.1
-BugFix: Band & Mode information was not properly stored.

August-2015 - 0.9.2
- Bugfix: An ADIF file with one blank line and one QSO used to froze KLog.
- Bugfix: Minor bugfix in the definition of propagation modes.
- BugFix: When editing a QSO the name was not shown.
- BugFix: STX_String field was not always imported properly.